fixed jumping of logo on login site

--- a/assets/login.css
+++ b/assets/login.css
@@ -4,6 +4,7 @@
     justify-content: space-between;
     align-items: center;
     padding: 40px 80px;
+    height: 208px;
 }
 
 .signUp_btn_desktop {
